2025-07-22T12:49:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16444793209 # 1114
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-22
* notice: last 14d: unq all: 37 79
* notice: prev accum: outdated-unq outdated-all / unq all: 4438 9237 / 4500 9317
* notice: next accum: outdated-unq outdated-all / unq all: 4438 9237 / 4501 9318
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-07-08 2025-07-22]

2025-07-22T01:57:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16432603037 # 1113
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-22
* notice: last 14d: unq all: 37 79
* notice: prev accum: outdated-unq outdated-all / unq all: 4421 9203 / 4500 9317
* notice: next accum: outdated-unq outdated-all / unq all: 4438 9237 / 4500 9317
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +4 +7 -1 -1 / 3 6
* notice: removed / changed dates: [2025-07-07] / [2025-07-08]

2025-07-21T12:50:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16417458330 # 1112
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-21
* notice: last 14d: unq all: 38 83
* notice: prev accum: outdated-unq outdated-all / unq all: 4421 9203 / 4494 9310
* notice: next accum: outdated-unq outdated-all / unq all: 4421 9203 / 4500 9317
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -9 -19 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [] / [2025-07-07 2025-07-21]

2025-07-21T02:03:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16406911097 # 1111