@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-09T12:46:31Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2025-07-23T01:58:25Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 3 ],
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
