@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-22T12:49:54Z",
-  "count_outdated" : 9237,
-  "uniques_outdated" : 4438,
-  "count" : 9318,
-  "uniques" : 4501,
+  "timestamp" : "2025-07-23T01:58:25Z",
+  "count_outdated" : 9244,
+  "uniques_outdated" : 4442,
+  "count" : 9324,
+  "uniques" : 4505,
   "clones" : [
     {
-      "timestamp": "2025-07-08T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 1, 7 ],
-      "count_decinc": [ 2, 7 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 2, 4 ]
-    },
-    {
       "timestamp": "2025-07-09T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 2,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-10T00:00:00Z",
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 7,
+      "count_minmax": [ 1, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 5,
+      "uniques_minmax": [ 1, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
