@@ -3,14 +3,9 @@
   "uniques": 37,
   "clones": [
     {
-      "timestamp": "2025-07-08T00:00:00Z",
-      "count": 5,
-      "uniques": 2
-    },
-    {
       "timestamp": "2025-07-09T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2025-07-10T00:00:00Z",
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2025-07-22T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 7,
+      "uniques": 5
     }
   ]
 }
